# RPN-Calculator-C-QT

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_RUS.md  dialog.cpp  dialog.ui  main_test.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  polish.texi
src/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp  main_test.c  mainwindow.cpp  polish.c
src/source/: polish.h
